tests/baselines/reference/for-of48.errors.txt
for-of48.ts(4,10): error TS2322: Type 'boolean' is not assignable to type 'number'.


==== for-of48.ts (1 errors) ====
    var x: string, y: number;
    var array = [{ x: "", y: true }]
    enum E { x }
    for ({x, y = E.x} of array) {
             ~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
        x;
        y;
    }